--- a/index.css
+++ b/index.css
@@ -13,6 +13,22 @@ body {
     position: relative;
     min-width: 375px;
 }
+#loading-background {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #fdfcf8;
+    opacity: 0.5;
+    z-index: 2000;
+}
+#loading-background img {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    top: calc(50% - 30px);
+}
 #header {
     position: absolute;
     width: 100%;
