--- a/index.css
+++ b/index.css
@@ -105,40 +105,8 @@ body {
 #content h2 {
     margin-bottom: 40px;
 }
-#editor {
-    margin-top: 30px;
-}
-#try-it::before {
-    content: "✍️";
-    margin-right: 10px;
-}
-#run, #reset {
-    margin: 22px;
-    cursor: pointer;
-    width: 60px;
-    height: 30px;
-}
-#reset {
-    margin-left: 0;
-}
-#codeContainer, #result {
-    height: 300px;
-    margin: 20px;
-    border-radius: 3px;
-    overflow: hidden;
-}
-#view-result::before {
-    content: "👀";
-    margin-right: 10px;
-}
-.monaco-editor, #result {
-    padding: 15px 0;
-    box-sizing: border-box;
-}
-#result {
-    padding: 15px;
-    border: 1px solid #aaaaaa;
-    overflow-y: auto;
+#content a {
+    font-weight: 500;
 }
 #footer {
     height: 50px;
@@ -165,17 +133,55 @@ body {
 h3.question {
     margin: 10px 0;
 }
+h3::before {
+    content: "😕";
+    margin-right: 10px;
+}
+.answer::before {
+    content: "😄";
+    margin-right: 10px;
+}
 .answer {
     position: relative;
     padding-left: 35px;
+}
+.answer .margin {
+    margin: 0 10px;
 }
 .answer::before {
     position: absolute;
     top: 0;
     left: 0;
 }
+.answer .code {
+    font-style: italic;
+    background-color: #eeeeee;
+    margin: 10px;
+}
 .answer+h3.question {
     margin-top: 30px;
+}
+.answer img {
+    width: 100%;
+    margin: 20px 0;
+}
+table {
+    margin: 20px 0;
+}
+table, th, td {
+    border: 1px solid #aaaaaa;
+    padding: 5px;
+}
+th, td {
+    min-width: 150px;
+    padding: 5px 10px;
+    text-align: center;
+}
+iframe {
+    width: 100%;
+    min-height: 400px;
+    border: none;
+    margin: 20px 0;
 }
 .sub-answer {
     padding-left: 20px;
