--- a/index.css
+++ b/index.css
@@ -154,8 +154,8 @@ h3::before {
     left: 0;
 }
 .answer .code {
-    font-style: italic;
-    background-color: #eeeeee;
+    font-weight: 600;
+    background-color: rgba(255,229,100,0.2);
     margin: 10px;
 }
 .answer+h3.question {
