--- a/index.css
+++ b/index.css
@@ -154,8 +154,7 @@ h3::before {
     left: 0;
 }
 .answer .code {
-    font-weight: 600;
-    background-color: rgba(255,229,100,0.2);
+    background-color: #eeeeee;
     margin: 10px;
 }
 .answer+h3.question {
@@ -182,6 +181,9 @@ iframe {
     min-height: 400px;
     border: none;
     margin: 20px 0;
+}
+.answer p {
+    margin: 5px 0;
 }
 .sub-answer {
     padding-left: 20px;
