--- a/index.css
+++ b/index.css
@@ -105,8 +105,12 @@ body {
 #content h2 {
     margin-bottom: 40px;
 }
-#content a {
-    font-weight: 500;
+a {
+    text-decoration: none;
+    color: rgb(8, 126, 164);
+}
+a:hover {
+    text-decoration: underline;
 }
 #footer {
     height: 50px;
@@ -155,7 +159,10 @@ h3::before {
 }
 .answer .code {
     background-color: #eeeeee;
+    line-height: 24px;
     margin: 10px;
+    padding: 20px;
+    border-radius: 5px;
 }
 .answer+h3.question {
     margin-top: 30px;
