--- a/index.css
+++ b/index.css
@@ -173,13 +173,14 @@ h3::before {
 }
 table {
     margin: 20px 0;
+    max-width: 100%;
 }
 table, th, td {
     border: 1px solid #aaaaaa;
     padding: 5px;
 }
 th, td {
-    min-width: 150px;
+    min-width: 120px;
     padding: 5px 10px;
     text-align: center;
 }
