--- a/index.css
+++ b/index.css
@@ -167,12 +167,8 @@ h3::before {
 .answer+h3.question {
     margin-top: 30px;
 }
-.answer img {
-    width: 100%;
-    margin: 20px 0;
-}
 table {
-    margin: 20px 0;
+    margin: 20px auto;
     max-width: 100%;
     border: 2px solid #999999;
     border-collapse: separate;
